# tekt-linter

./: .agentrules  CLAUDE.md  Cargo.toml  README.md  USAGE.md  crystalline.toml  lib.rs
00_nucleo/adr/: 0001-code-to-prompt-feedback-direction.md  0001-tree-sitter-intermediate-repr.md  0002-typed-extensions-for-parsed-file.md  0004-reformulação-do-motor-de-análise.md  0005-location-owned-paths-e-cargo.toml-como-artefato-gerido.md  0006-fechamento-topológico-e-proteção-de-encapsulamento.md  0007-fechamento-comportamental-lab-contratos-fiacao.md  0008-estrategia-de-distribuicao.md  0009-isolamento- de-parsers-por-linguagem.md  0010-exclusao-ficheiros-individuais.md  0011-mutable-state-in-core.md  0012-external-type-in-contract.md  0013-import-vs-module-decl.md  0014-v11-configurable-level.md  ADR-0015-detecção-de-blanket-impls-para-V11.md
00_nucleo/prompts/: .fix-hashes.md.kate-swp  architecture-standards.md  cargo.md  file-walker.md  fix-hashes.md  linter-core.md  project-index.md  prompt-walker.md  readme_prompt.md  rs-parser.md  sarif-formatter.md  violation-types.md
01_core/contracts/: file_provider.rs  language_parser.rs  mod.rs  parse_error.rs  prompt_provider.rs  prompt_reader.rs  prompt_snapshot_reader.rs  rule_traits.rs
01_core/entities/: l1_allowed_external.rs  layer.rs  mod.rs  parsed_file.rs  project_index.rs  rule_traits.rs  violation.rs
02_shell/: cli.rs  fix_hashes.rs  mod.rs  update_snapshot.rs
03_infra/: c_parser.rs  config.rs  cpp_parser.rs  hash_writer.rs  mod.rs  prompt_reader.rs  prompt_snapshot_reader.rs  prompt_walker.rs  py_parser.rs  rs_parser.rs  snapshot_writer.rs  ts_parser.rs  walker.rs  zig_parser.rs
04_wiring/: main.rs
tmp/: ast_check.rs
(+43 files in other folders)
