[package]
name = "crystalline-lint"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Crystalline Architecture Linter"

[lib]
path = "lib.rs"

[[bin]]
name = "crystalline-lint"
path = "04_wiring/main.rs"

[dependencies]
# L3 — infra
tree-sitter       = "0.22"
tree-sitter-rust  = "0.21"
walkdir           = "2"
sha2              = "0.10"
hex               = "0.4"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
toml              = "0.8"

# L2 — shell
clap              = { version = "4", features = ["derive"] }
colored           = "2"

[dev-dependencies]
tempfile = "3"
