[package]
name = "crystalline-lint"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Crystalline Architecture Linter"
repository = "https://github.com/Dikluwe/tekt-linter"
license = "MIT"

[lib]
path = "lib.rs"

[[bin]]
name = "crystalline-lint"
path = "04_wiring/main.rs"

[dependencies]
# L1 — core
thiserror         = "1"

# L3 — infra
tree-sitter            = "0.23"
tree-sitter-rust       = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python     = "0.23"
tree-sitter-c          = "0.23"
tree-sitter-cpp        = "0.23"
walkdir           = "2"
sha2              = "0.10"
hex               = "0.4"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
toml              = "0.8"

# L2 — shell
clap              = { version = "4", features = ["derive"] }
colored           = "2"

# L4 — wiring (ADR-0004)
rayon             = "1"
tree-sitter-zig = "1.1.2"

[dev-dependencies]
tempfile = "3"
